tests/NormalTests/paczka1/fuzzy1/24027193.err
Error in line 3: A229 S509 75,4
Error in line 12: rXLgdp2vvr S166 85,6
Error in line 14: rXLgdp2vvr A229 11,2
Error in line 19: rXLgdp2vvr S166 15,0
Error in line 24: rXLgdp2vvr A229 198,1
Error in line 25: rXLgdp2vvr S166 7,6
